# home-assistant-codex-video-runner

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml  repository.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  docs.yml  publish-container.yml  release.yml  scheduled-compat.yml  security.yml
docs/: SCHEDULING.md
personal_video_runner/: CHANGELOG.md  DOCS.md  README.md  config.yaml
scripts/: container-entrypoint.sh  doctor.sh  generate_demo.sh  install.sh  run_daily.sh  run_weekly.sh  uninstall.sh  update.sh  verify_installation.sh  visual_qa.py
src/video_runner/: __init__.py  audio.py  captions.py  charts.py  cli.py  config.py  friendly.py  home_assistant.py  layouts.py  model_policy.py  motion.py  personalization.py  render.py  scheduler.py  schemas.py  security.py  storage.py  story_selection.py  themes.py  tts.py
tests/: test_core.py  test_render_integration.py  test_storytelling.py
